--- a/frontend-cemos/public/assets/content/estrategia/2-estrategias-maritimas/2. Estratégias Marítimas no Séc XXI_Lars Wedin_V.04_ocr.md
+++ b/frontend-cemos/public/assets/content/estrategia/2-estrategias-maritimas/2. Estratégias Marítimas no Séc XXI_Lars Wedin_V.04_ocr.md
@@ -16,7 +16,7 @@ Em 1907, o Capitão-Tenente Castex torna-se assessor no ministério da Marinha. 
 
 Em umanova obra intitulada Le grand état-major naval, datada de 1909, Castex preconiza que a Marinha assuma a responsabilidade do planejamento operacional e que a gestão das questões administrativas seja atribuída a outros órgãos. Em uma outra obra, Les idées militaires de la marine au XVIIF siêcle, ele aborda a estratégia sob uma perspectiva histórica, testemunhando, assim, seu alinhamento com a escola Mahaniana. Neste livro, ele afirmava notadamente que as ideias estratégicas sobrepõem-se às questões materiais: “o material é apenas um monte de madeira ou de metal, em que a concepção leva vantagem sobre a justaposição. O fator intelectual afirma, assim, sua preeminência”.
 
-Durante a Grande Guerra, Castex, que comandava o naviopatrulha Altair, descobriu a complexidade da luta contra os submarinos. Ele se revelou muito crítico quanto à estratégia de desgastar os navios-patrulha ao longo das linhas de comunicação, observando nesse emprego uma deplorável dispersão de meios. Castex preconiza o sistema de comboios; dito de outra maneira, ele apoia a concentração”. Porém, visto como defensivo, esse sistema era contrário ao espírito ofensivo dos partidários de Mahan, que se apegavam apenas ao dogma da batalha decisiva. O próprio Castex havia professado este dogma antes da guerra, como atesta a frase de seu livro Le grand état-major naval: “a finalidade única do estrategista deve ser suprimir, por todos os meios possíveis, onde elas estiverem, as forças móveis do adversário”.
+Durante a Grande Guerra, Castex, que comandava o naviopatrulha Altair, descobriu a complexidade da luta contra os submarinos. Ele se revelou muito crítico quanto à estratégia de desgastar os navios-patrulha ao longo das linhas de comunicação, observando nesse emprego uma deplorável dispersão de meios. Castex preconiza o sistema de comboios; dito de outra maneira, ele apoia a concentração. Porém, visto como defensivo, esse sistema era contrário ao espírito ofensivo dos partidários de Mahan, que se apegavam apenas ao dogma da batalha decisiva. O próprio Castex havia professado este dogma antes da guerra, como atesta a frase de seu livro Le grand état-major naval: “a finalidade única do estrategista deve ser suprimir, por todos os meios possíveis, onde elas estiverem, as forças móveis do adversário”.
 
 ## Página 27
 
