--- a/frontend-cemos/public/assets/content/geopolitica-ri/geopolitica-modernidade/scripts/1m.md
+++ b/frontend-cemos/public/assets/content/geopolitica-ri/geopolitica-modernidade/scripts/1m.md
@@ -27,6 +27,6 @@ caiu_em_prova e ano_prova: podem ser deixados vazios ou preenchidos conforme apl
 
 Modelo de saída esperado
 
-| bibliografia_titulo | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova
+| bibliografia_id | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova
 | 1| Pág 15 | 1 | Qual teórico é considerado o fundador (...)? | Immanuel | Hans | Alexander | Nye | b | conforme o **item 4.3.1**, Morgenthau é (...). |
 
