--- a/frontend-cemos/public/assets/content/intendencia/33-ema-305/script/4m.md
+++ b/frontend-cemos/public/assets/content/intendencia/33-ema-305/script/4m.md
@@ -1,4 +1,4 @@
-Sua tarefa é ler o conteúdo do arquivo cap.md e criar um banco de questões com 1 questão por página de múltipla escolha.
+Sua tarefa é ler o conteúdo do arquivo cap4.md e criar um banco de questões.
 
 Cada questão deve:
 1- Ser relevante e coerente com o conteúdo do capítulo.
@@ -21,7 +21,7 @@ alternativa_a até alternativa_d: alternativas de resposta.
 resposta_correta: letra da alternativa correta (a, b, c ou d).
 justificativa_resposta_certa:
 frase objetiva contendo obrigatoriamente a referência explícita ao texto, por exemplo:
-“Conforme o item 1.2 do Capítulo 1, …” ou
+“Conforme o item 1.2 …” ou
 “Nos termos do art. 2º, inciso I, …”
 caiu_em_prova e ano_prova: podem ser deixados vazios ou preenchidos conforme aplicável.
 
