--- a/frontend-cemos/public/assets/content/intendencia/2-ema-400/script/m1.md
+++ b/frontend-cemos/public/assets/content/intendencia/2-ema-400/script/m1.md
@@ -19,4 +19,4 @@
 | Tratado de Estratégia | Pág 70 | Cap. 1 - A estratégia enquanto conceito | De acordo com a "Teoria da Lógica do Duelo" de Gabriel Tarde e a sociologia de Simmel, o que tende a acontecer em conflitos com múltiplos participantes? | O conflito se fragmenta em múltiplas pequenas guerras independentes. | Ocorre uma redução à dualidade (amigo vs. inimigo), simplificando a situação para dois lados opostos. | Todos os participantes lutam contra todos simultaneamente até a exaustão. | A diplomacia resolve o conflito antes que a violência ocorra. | b | A tendência sociológica e estratégica é a redução de tríades ou grupos múltiplos a duas forças opostas (lógica do duelo/amigo-inimigo). | | |
 | Tratado de Estratégia | Pág 71 | Cap. 1 - A estratégia enquanto conceito | Clausewitz formula as "leis de ação recíproca" para explicar a dinâmica da guerra. O que essas leis descrevem teoricamente? | A tendência da guerra à "ascensão aos extremos" devido à interação entre os adversários. | A capacidade da diplomacia de interromper a guerra a qualquer momento. | A superioridade da defesa sobre o ataque em qualquer circunstância. | A necessidade de limitar a violência para poupar recursos econômicos. | a | As leis de ação recíproca (eu comando o inimigo, ele me comanda; colisão de forças vivas) levam, na teoria pura, à escalada ou ascensão aos extremos da violência. | | |
 | Tratado de Estratégia | Pág 71 | Cap. 1 - A estratégia enquanto conceito | Na realidade, a "guerra absoluta" de Clausewitz raramente ocorre. Qual é um dos fatores citados que bloqueia a ascensão aos extremos? | A falta de munição no início das guerras. | A intervenção de terceiros (países neutros) e a resistência social ao sacrifício. | O acordo tácito entre generais para não causar baixas. | A ausência de paixões políticas nos conflitos modernos. | b | O texto cita os "neutros", a política e a resistência social como fatores que atenuam a teoria pura e impedem a ascensão aos extremos na realidade. | | |
-| Tratado de Estratégia | Pág 75 | Cap. 1 - A estratégia enquanto conceito | Thomas Schelling, em *The Strategy of Conflict* (1960), contestou a visão de soma zero pura. Qual ideia fundamental ele introduziu? | Que a guerra é apenas caos e não pode ser teorizada. | Que existe sempre uma margem de interesse comum (cooperação), mesmo que seja apenas evitar a destruição mútua. | Que a comunicação com o inimigo é impossível durante o conflito. | Que a vitória militar total é o único objetivo racional. | b | Schelling mostrou que conflitos não são necessariamente soma zero e que existe interesse comum (ex: sobrevivência) e comunicação (ameaça/coação). | | |
+| Tratado de Estratégia | Pág 75 | Cap. 1 - A estratégia enquanto conceito | Thomas Schelling, em *The Strategy of Conflict* (1960), contestou a visão de soma zero pura. Qual ideia fundamental ele introduziu? | Que a guerra é apenas caos e não pode ser teorizada. | Que existe sempre uma margem de interesse comum (cooperação), mesmo que seja apenas evitar a destruição mútua. | Que a comunicação com o inimigo é impossível durante o conflito. | Que a vitória militar total é o único objetivo racional. | b |  | | |
